--- a/cloudformation/service/Infrastructure/release.yaml
+++ b/cloudformation/service/Infrastructure/release.yaml
@@ -1,13 +1,9 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: CodeBuild project for deployments
-
+Description: CodeBuild project for releases
 # Note: It's necessary to set up the AWS OAuth application to have access to your repositories.
 # To do it, navigate to the AWS CodeBuild console, create a project and select GitHub as source provider. The project does not need to be saved, it is only important to connect to GitHub. It only needs to be done once.
 
 Parameters:
-  EnvLabel:
-    Type: String
-
   GitRepo:
     Type: String
 
@@ -36,7 +32,7 @@ Resources:
           Action:
           - sts:AssumeRole
       Policies:
-        - PolicyName: !Join ['-', [!Ref 'AWS::StackName', 'DeployCodeBuildRolePolicy']]
+        - PolicyName: !Join ['-', [!Ref 'AWS::StackName', 'ReleaseCodeBuildRolePolicy']]
           PolicyDocument:
             Version: 2012-10-17
             Statement:
@@ -68,18 +64,29 @@ Resources:
                   - cloudformation:*
                   - cloudwatch:*
                   - servicediscovery:*
-                  - ssm:*
                 Resource: "*"
+              - Effect: Allow
+                Action:
+                  - kms:ListKeys
+                  - kms:ListAliases
+                  - kms:Describe*
+                  - kms:Decrypt
+                Resource:
+                - !Sub arn:aws:kms:${AWS::Region}:${AWS::AccountId}:alias/aws/ssm
+              - Effect: Allow
+                Action: ssm:GetParameters
+                Resource:
+                - !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/oauth_tokens/github/cfautomator
               - Resource: "*"
                 Effect: Allow
                 Action:
                 - iam:PassRole
 
-  CodeBuildDeploy:
+  CodeBuildRelease:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: !Ref AWS::StackName
-      Description: ECS Deployer
+      Name: !Sub ${ServiceName}-${SubSystem}-ecs-release
+      Description: Git version release
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Artifacts:
         Type: no_artifacts
@@ -87,28 +94,35 @@ Resources:
         Type: GITHUB
         Auth:
           Type: OAUTH
-        Location: !Sub https://github.com/${GIT_REPO}.git
+        Location: !Sub https://github.com/${GitRepo}.git
         BuildSpec: |
           version: 0.2
+          env:
+            variables:
+              GIT_USER: cfautomator
+            parameter-store:
+              GIT_TOKEN: /oauth_tokens/github/cfautomator
           phases:
             pre_build:
               commands:
-                - if [ ! -z "$GIT_BRANCH" ]; then git checkout $GIT_BRANCH; fi
+                - COMMIT="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
+                - WORKDIR=$(pwd)
+                - GIT_REMOTE=https://${GIT_USER}:${GIT_TOKEN}@github.com/${GIT_REPO}.git
+                - git remote remove origin
+                - git remote add origin $GIT_REMOTE
+                - cd $SOURCE_PATH
+                - SERVICE_VERSION=$(make -s version)
+                - HAS_TAG=`git ls-remote origin refs/tags/v$SERVICE_VERSION`
+                - if [ ! -z "$HAS_TAG" ]; then echo "$SERVICE_VERSION has already been released." && exit 1; fi
             build:
               commands:
-                - echo "Starting deploy for ${SERVICE_NAME} for ${ENV_LABEL} environment"
-                - cd $SOURCE_PATH
-                - |
-                  if [ ! -z "$DEPLOY_SERVICE_VERSION" ]; then
-                    echo "Deploying ${DEPLOY_SERVICE_VERSION}..."
-                    make deploy-service SERVICE_VERSION=$DEPLOY_SERVICE_VERSION
-                  else
-                    COMMIT="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 7)"
-                    echo "Deploying ${COMMIT}..."
-                    make test
-                    make ecr-push SERVICE_VERSION=$COMMIT
-                    make deploy-service SERVICE_VERSION=$COMMIT
-                  fi
+                - echo "Starting release for ${SERVICE_NAME} at ${COMMIT} for v${SERVICE_VERSION}"
+                - make build
+                - make test
+                - make ecr-push
+                - GIT_TAG="v${SERVICE_VERSION}"
+                - git tag $GIT_TAG $COMMIT
+                - git push origin $GIT_TAG
       Triggers:
         Webhook: false
       Environment:
@@ -118,7 +132,7 @@ Resources:
         EnvironmentVariables:
         - Name: SERVICE_NAME
           Value: !Ref ServiceName
-        - Name: ENV_LABEL
-          Value: !Ref EnvLabel
         - Name: SOURCE_PATH
           Value: !Ref SourcePath
+        - Name: GIT_REPO
+          Value: !Ref GitRepo
