Fix variables name and fix typos

--- a/cloudformation/service/Dockerfile
+++ b/cloudformation/service/Dockerfile
@@ -8,7 +8,7 @@ ENV GRANITIC_HOME=$GOPATH/src/github.com/graniticio/granitic
 ENV WORKSPACE=$GOPATH/src/service
 
 ARG GIT_USER
-ARG GIT_OUTH_TOKEN
+ARG GIT_OAUTH_TOKEN
 
 WORKDIR $WORKSPACE
 
