--- a/cloudformation/cluster/Infrastructure/resources.yaml
+++ b/cloudformation/cluster/Infrastructure/resources.yaml
@@ -3,10 +3,10 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: Cluster resources, below is a commented sample dynamo table, uncommented or replace with your cluster resources as required
 
 Parameters:
-  EnvironmentName:
+  EnvLabel:
     Description: Name of the environment this cloudformation stack belongs to
     Type: String
-  EnvironmentType:
+  EnvType:
     Default: nonproduction
     Description: Type of the environment for this stack
     Type: String
@@ -46,10 +46,10 @@ Parameters:
 #           Ref: ReadCapacityUnits
 #         WriteCapacityUnits:
 #           Ref: WriteCapacityUnits
-#       TableName: !Sub ${EnvironmentName}-${SubSystem}-workers
+#       TableName: !Sub ${EnvLabel}-${SubSystem}-workers
 # Outputs:
 #   TableName:
 #     Value: !Ref WorkersDynamoDBTable
 #     Description: Dynamo table name
 #     Export:
-#       Name: !Join [ ':', [ !Ref EnvironmentName, WorkersDynamoDBTable ] ]
+#       Name: !Join [ ':', [ !Ref EnvLabel, WorkersDynamoDBTable ] ]
