--- a/cloudformation/nodeapp/package.json
+++ b/cloudformation/nodeapp/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "npm run build && node server.js",
-    "build": "./node_modules/.bin/webpack"
+    "build": "webpack"
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
@@ -19,13 +19,9 @@
     "express-validator": "^5.3.0",
     "morgan": "^1.9.1",
     "prop-types": "^15.6.2",
-    "pug": "^2.0.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "serve-favicon": "^2.5.0"
   },
