--- a/cloudformation/nodeapp/package.json
+++ b/cloudformation/nodeapp/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "npm run build && node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
@@ -26,11 +27,24 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "^23.3.13",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "babel-loader": "^8.0.5",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^5.3.2",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.2.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
