--- a/cloudformation/nodeapp/package.json
+++ b/cloudformation/nodeapp/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "npm run build && node server.js",
     "build": "webpack",
-    "test": "jest"
+    "test": "jest",
+    "check-types": "tsc"
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
@@ -28,6 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
