--- a/cloudformation/nodeapp/package.json
+++ b/cloudformation/nodeapp/package.json
@@ -11,7 +11,8 @@
     "start": "npm run build && node server.js",
     "build": "webpack",
     "test": "jest",
-    "check-types": "tsc"
+    "type-check": "tsc",
+    "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
