--- a/cloudformation/nodeapp/package.json
+++ b/cloudformation/nodeapp/package.json
@@ -45,11 +45,10 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "jest": "24.0.0",
     "node-sass": "^4.11.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
-    "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.2.2",
