--- a/cloudformation/nodeapp/Infrastructure/resources.yaml
+++ b/cloudformation/nodeapp/Infrastructure/resources.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Service resources
 
 Parameters:
-  EnvLabel:
+  EnvironmentName:
     Description: Name of the environment this cloudformation stack belongs to
     Type: String
 
