Provide needed permissions only.

--- a/cloudformation/cluster/Infrastructure/ci.yaml
+++ b/cloudformation/cluster/Infrastructure/ci.yaml
@@ -33,7 +33,8 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - logs:*
+                  - "logs:CreateLogStream"
+                  - "logs:PutLogEvents"
                 Resource:
                   - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/*
 
